# 66north-order-service

./: README.md
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20a2128406fd_initial_migration_with_users_table.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_error_handling.py  test_main.py  test_models.py  test_orders.py  test_schemas.py  test_summary.py
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/admin/: admin.module.css  page.tsx
frontend/app/admin/components/: CurrencyBreakdown.tsx  DashboardFooter.tsx  DashboardHeader.tsx  MetricsHeroCard.tsx  OrdersTable.tsx
frontend/app/admin/services/: currencyService.ts  orderService.ts
frontend/app/admin/types/: order.types.ts
frontend/components/: RevenueChart.tsx
frontend/components/ui/: provider.tsx
utils/: dummy-data.json  post_dummy_data.py
