[project]
name = "66north-order-service-backend"
version = "0.1.0"
description = "Backend for 66north order service"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # Core API framework
    "fastapi>=0.117.1",
    # ASGI server to run FastAPI
    "uvicorn[standard]>=0.37.0",
    # ORM for database
    "sqlalchemy>=2.0.25",
    # Database migrations
    "alembic>=1.13",
    # PostgreSQL driver
    "psycopg[binary]>=3.2.10",
    # Data validation (comes with FastAPI but explicit is good)
    "pydantic>=2.4",
    # For environment variables/config
    "pydantic-settings>=2.11.0",
    # Testing framework
    "pytest>=8.4.2",
    # Async support for pytest
    "pytest-asyncio>=0.23",
    # HTTP client for testing
    "httpx>=0.27.0"
]


[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "sqlalchemy[mypy]>=2.0.25",
    "types-python-jose>=3.3.4",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP","B","SIM","PGH"]
lint.ignore = ["E501"]
target-version = "py310"
exclude = [
    "alembic/versions/*",
    "__pycache__",
    "*.pyc",
    ".venv/*"
]

